# exercism_python

./: .gitignore
black-jack/: black_jack.py  black_jack_test.py  pyproject.toml
black-jack/.exercism/: metadata.json
card-games/: lists.py  pyproject.toml
card-games/.exercism/: metadata.json
currency-exchange/: exchange.py  pyproject.toml
currency-exchange/.exercism/: metadata.json
ghost-gobble-arcade-game/: requirements.txt
ghost-gobble-arcade-game/.exercism/: metadata.json
little-sisters-vocab/: pyproject.toml  strings.py
little-sisters-vocab/.exercism/: metadata.json
meltdown-mitigation/: Pipfile  conditionals.py
meltdown-mitigation/.exercism/: metadata.json
