[tool.poetry]
name = "black-jack"
version = "0.1.0"
description = "exercism.org black-jack problem"
authors = ["godsmith <jgodfrey-smith@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
